--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "eslint": "^7.18.0",
     "jest": "^26.6.3",
     "supertest": "^6.0.1"
+  },
+  "dependencies": {
+    "knex": "^0.95.1",
+    "sqlite3": "^5.0.2"
   }
 }
